# nowhow

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLEAN_ARCHITECTURE_SUMMARY.md  README.md  start.sh
backend/: api_proxy.py  conf.yml  main.py  modern_tools_setup.md  pyproject.toml  simple_test_server.py  sources_premium.yml  start_api_fixed.py  start_modern.py  test_clean_architecture.py  test_crawler.py  test_enhanced_crawler.py  test_fix_verification.py  test_unified_modern.py
backend/adapters/: crawler_adapter.py  repositories.py
backend/agents/: __init__.py  base_agent.py  crawler_agent.py  enhanced_crawler_agent.py  enhanced_workflow.py  fixed_crawler_agent.py  modern_crawler_agent.py  processor_agent.py  research_agent.py  unified_modern_workflow.py  workflow.py  writer_agent.py
backend/api/: clean_api.py  enhanced_storage_api.py  main.py  sources_api.py  unified_modern_api.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  clean_architecture.py  container.py  dependency_container.py  exceptions.py  interfaces.py
backend/database/: __init__.py  connection.py  models.py
backend/models/: knowledge_models.py  source_config.py
backend/repositories/: __init__.py  db_source_repository.py  source_repository.py
backend/scripts/: cleanup_files.py  migrate_sources_simple.py  migrate_sources_to_db.py  migrate_to_db.py  verify_migration.py
backend/services/: __init__.py  ai_analyzer.py  article_writer.py  auth_service.py  cache_service.py  content_processor.py  crawler_service.py  db_storage_service.py  knowledge_extractor.py  (+11 more)
(+220 files in other folders)
